--- a/Site/Static/styles/style.css
+++ b/Site/Static/styles/style.css
@@ -13,6 +13,10 @@ body{
     max-width: 1219px;
 }
 
+.minWidth{
+    min-width: 360px;
+}
+
 .mainColor{
     color: #007765;
 }
@@ -71,12 +75,50 @@ header p{
     padding: 0;
 }
 
+.headerImage{
+    margin: 0 auto;
+    height: 403px;
+    background: url('../images/jumbotronBIG.png'), lightgray 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.h1TextStyle{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.headerImageText{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
 /* ! МЕДИА ЗАПРОСЫ */
+@media screen and (max-width: 1219px) {
+    .headerImage{
+    background: url('../images/jumbotron.png'), lightgray 50%;  
+    }
+}
+
 @media screen and (max-width: 992px) {
     header a,
     header p{
         font-size: 20px;
+    }
+
+    .headerImage{
+        background-position: center center;  
     }
 }
 
@@ -84,7 +126,6 @@ header p{
     .imgHeaderLogo{
         max-width: 80%;
     }
-    
 
     header a,
     header p{
@@ -100,7 +141,7 @@ header p{
         max-width: 75%;
         margin-bottom: 15px;
     }
-    
+
     .HeaderLinkBlock{
         justify-content: center;
     }
@@ -112,11 +153,25 @@ header p{
     header a{
         font-size: 16px;
     }
+    .headerImage{
+        height: 350px;
+    }
+    .h1TextStyle{
+        font-size: 55px;
+    }
+
 }
 
 @media screen and (max-width: 419px) {
     .HeaderLinkBlock{
         flex-direction: column;
+    }
+
+    .headerImage{
+        height: 310px;
+    }
+    .h1TextStyle{
+        font-size: 48px;
     }
 
 }
