--- a/Site/Static/styles/style.css
+++ b/Site/Static/styles/style.css
@@ -25,6 +25,15 @@ body{
     background: #007765;
 }
 
+.bgc-eee{
+    background-color: #EEE;
+}
+
+.padingLR54{
+    padding-left: 54px;
+    padding-right: 54px;
+}
+
 .headerRow{
     align-items: center;
     min-height: 84px;
@@ -103,6 +112,20 @@ header p{
     align-items: center;
     justify-content: center;
 }
+
+.TheProblemBlock h2{
+    margin-top: 48px;
+    margin-bottom: 16px;
+}
+
+.h2TextStyle{
+    font-family: Roboto;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
 
 /* ! МЕДИА ЗАПРОСЫ */
 @media screen and (max-width: 1219px) {
